samples/_failures_safe/1761330104_cee811_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58f5162a.c: In function ‘main’:
./samples/SAFE/__tmp_58f5162a.c:137:5: error: expected identifier or ‘(’ at end of input
  137 |     int
      |     ^~~
./samples/SAFE/__tmp_58f5162a.c:137:5: error: expected declaration or statement at end of input
